--- a/.github/workflows/manual-input-workflow.yml
+++ b/.github/workflows/manual-input-workflow.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow that is manually triggered
 
-name: manual-input-workflow
+name: deploy-reduction-modules
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
@@ -16,46 +16,52 @@ on:
         type: choice
         options:
         - Select Job Id
-        - Addition
-        - Subtraction        
-        - Multiplication
+        - deploy_reduction_module_1
+        - deploy_reduction_module_2    
+        - deploy_reduction_module_3
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains multiple jobs
-  # Addition job
-  addition:
-    name: Addition of two integers
-    if: github.event.inputs.job == 'Addition'
+  # reduction_module_1 deployment job
+  deploy_reduction_module_1:
+    name: Reduction module_1 deployment
+    if: github.event.inputs.job == 'deploy_reduction_module_1'
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Runs a single command using the runner's shell
-    - name: Display the addition of two integers
-      run: echo "2+3=5"
-  # Subtraction job
-  Subtraction:
-    name: Subtraction of two integers
-    if: github.event.inputs.job == 'Subtraction'
+    - name: Deploy Reduction module_1 in AWS EC2
+      run: |
+        whoami
+        pwd
+  # reduction_module_2 deployment job
+  deploy_reduction_module_2:
+    name: Reduction module_2 deployment
+    if: github.event.inputs.job == 'deploy_reduction_module_2'
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Runs a single command using the runner's shell
-    - name: Display the subtraction of two integers
-      run: echo "5-2=3"
-    # Multiplication job
-  multiplication:
-    name: Multiplication of two integers
-    if: github.event.inputs.job == 'Multiplication'
+    - name: Deploy Reduction module_2 in AWS EC2
+      run: |
+        whoami
+        pwd
+  # reduction_module_3 deployment job
+  deploy_reduction_module_3:
+    name: Reduction module_3 deployment
+    if: github.event.inputs.job == 'deploy_reduction_module_3'
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Runs a single command using the runner's shell
-    - name: Display the multiplication of two integers
-      run: echo "2x3=6"
+    - name: Deploy Reduction module_3 in AWS EC2
+      run: |
+        whoami
+        pwd
