added pwd and ls commands

--- a/.github/workflows/deploy-reduction-modules.yml
+++ b/.github/workflows/deploy-reduction-modules.yml
@@ -41,11 +41,14 @@ jobs:
             git pull
           else
             git clone https://github.com/sriharsha219/github-workflows
+            pwd
+            ls
           fi
       - name: Run reduction_module_1.py script in AWS EC2
         run: |
           cd ./github-workflows/reduction
           pwd
+          ls
           python3 reduction_module_1.py
   # reduction_module_2 deployment job
   deploy_reduction_module_2:
@@ -62,9 +65,12 @@ jobs:
           if [ -d "./github-workflows" ]; then
             cd ./github-workflows
             pwd
+            ls
             git pull
           else
             git clone https://github.com/sriharsha219/github-workflows
+            pwd
+            ls
           fi
       - name: Run reduction_module_2.py script in AWS EC2
         run: |
@@ -86,6 +92,7 @@ jobs:
           if [ -d "./github-workflows" ]; then
             cd ./github-workflows
             pwd
+            ls
             git pull
           else
             git clone https://github.com/sriharsha219/github-workflows
@@ -94,4 +101,5 @@ jobs:
         run: |
           cd ./github-workflows/reduction
           pwd
+          ls
           python3 reduction_module_3.py
